# rust-cli-examples

./: .gitignore  README.md
01_hello_world/: Cargo.toml  README.md  package.json  pre-install.js  start.js  uninstall.js
01_hello_world/mutants.out/: lock.json  outcomes.json
01_hello_world/mutants.out.old/: caught.txt  lock.json  mutants.json  outcomes.json
01_hello_world/src/: main.rs
01_hello_world/tests/: prints-hello-world.rs
02_bin_files/: Cargo.toml
03_arg_parse/: Cargo.toml  README.md
04_cool_bool/: Cargo.toml
04_env_reader/: .env_EXAMPLE  Cargo.toml
04_yes_or_no/: Cargo.toml
05_apology_letter/: Cargo.toml
06_image_resizer/: Cargo.toml
07_apology_letter/: example_output.txt
07_scaffold_from_github/: .gitignore  Cargo.toml
09_get_json/: Cargo.toml
09_github_scaffold/: Cargo.toml
10_happy_birthday/: Cargo.toml
10_random_number_gen/: Cargo.toml
wip_wordle_game/: Cargo.toml
wip_wordle_game/data/: english-dictionary.dic
wip_wordle_game/src/: args_parser.rs  console_printer.rs  english_word_validator.rs  game_manager.rs  guess_scorer.rs  main.rs  prompt_controller.rs  remaining_letters.rs
wip_wordle_game/src/data_elements/: data.rs
wip_wordle_game/src/pure_functions/: colorizer.rs  guess_colorizer.rs  guess_scorer.rs  keyboard_letters_colorizer.rs
wip_wordle_game/src/side_effect_inputs/: args_parser.rs  text_input_handler.rs
wip_wordle_game/src/side_effect_lib_wrappers/: english_word_validator.rs  random_word_generator.rs
wip_wordle_game/src/side_effect_outputs/: console_printer.rs  render_config.rs
wip_wordle_game/tests/: plays_wordle.rs
(+97 files in other folders)
