[package]
name = "hello-world-rs"
version = "0.0.3"
edition = "2021"
description = "Jim's solution to exercise 01_hello_world of the rust-cli-exercises!"
repository = "https://github.com/JimLynchCodes/rust-cli-examples"
readme = "README.md"
keywords = ["rust", "rustlang", "cli", "npm", "hello-world"]
categories = ["command-line-utilities", "cli", "hello-world", "rust"]
license = "MIT"
homepage = "https://github.com/JimLynchCodes/rust-cli-examples"
authors = ["Jim Lynch - jim.lynch@evaluates2.com"]
private = "false"

[dev-dependencies]
assert_cmd = "2.0.10"

[dependencies]
cargo-tarpaulin = "0.25.2"
