[package]
name = "rand_num_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
random_word = "0.3.0"
lingua = { version = "1.4.0", default-features = false, features = ["english", "italian", "spanish"] }
symspell = "0.4.3"
inquire = "0.6.1"
console = "0.15.5"
ispell = "0.3.1"

[dev-dependencies]

